Data Ingestion from Kafka to SQL Server 🪈

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 CLIENT_ID="q2rjik5a87jljijow202xogb85zk4g"
 CLIENT_SECRET="ia10slmm2w604sqog5iwp9h1ppwars"
 ESARAC_TOKEN="6hgflbwgla0yvvbrrng57kuv33mw5t"
+CHAT_TOKEN="oauth:m9e0w9vt9malbqljon3bkxm6xgel5u"
+
+DB_SERVER='LAPTOP-9LE625EI\MSSQLSERVER02'
+DB_DATABASE='DataAnalytics'
+DB_USERNAME='KafkaConsumer'
+DB_PASSWORD='zipTrJ0NtoIWuGj'
