--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,24 @@ services:
       - ./db/secrets/:/var/opt/mssql/secrets/
     ports:
       - 1433:1433
+    healthcheck:
+      test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${DB_SA_PASSWORD} -Q 'SELECT 1' || exit 1"]
+      interval: 10s
+      retries: 10
+      start_period: 10s
+      timeout: 3s
+  mssql.configurator:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    volumes:
+      - ./db/init:/docker-entrypoint-initdb.d
+    depends_on:
+      mssql:
+        condition: service_healthy
+    command: >
+      bash -c '
+      /opt/mssql-tools/bin/sqlcmd -S mssql -U sa -P ${DB_SA_PASSWORD} -d master -v KafkaPassword=${DB_PASSWORD} -i docker-entrypoint-initdb.d/init.sql;
+      echo "All done!";
+      '
   
   # producers:
   #   build:
